--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -16,32 +16,39 @@ stages:
         steps:
           - bash: echo Build FirstJob
           - bash: echo $(PipelineLevelVariable)
-      - job: SecondJob
-        steps:
-          - bash: echo Build SecondJob
-  - stage: DevDeploy
-    variables:
-      environment: Dev
-    dependsOn: Build
-    jobs:
-      - job: DevDeployJob
-        steps:
-          - bash: echo $(environment) DevDeployJob
-  - stage: QADeploy
-    variables:
-      environment: QA
-    dependsOn: Build
-    jobs:
-      - job: QADeployJob
-        steps:
-          - bash: echo $(environment) QADeployJob
-  - stage: ProdDeploy
-    variables:
-      environment: Prod
-    dependsOn:
-    - DevDeploy
-    - QADeploy
-    jobs:
-      - job: ProdDeployJob
-        steps:
-          - bash: echo $(environment) ProdDeployJob
+          - bash: echo $(Build.BuildNumber)
+          - bash: echo $(Build.BuildId)
+          - bash: echo $(Build.BuildBranchName)
+          - bash: echo $(Build.SourcesDirectory)
+          - bash: echo $(System.DefaultWorkingDirectory)
+          - bash: ls -R $(System.DefaultWorkingDirectory)
+          - bash: echo $(Build.ArtifactStagingDirectory)
+#      - job: SecondJob
+#        steps:
+#          - bash: echo Build SecondJob
+#  - stage: DevDeploy
+#    variables:
+#      environment: Dev
+#    dependsOn: Build
+#    jobs:
+#      - job: DevDeployJob
+#        steps:
+#          - bash: echo $(environment) DevDeployJob
+#  - stage: QADeploy
+#    variables:
+#      environment: QA
+#    dependsOn: Build
+#    jobs:
+#      - job: QADeployJob
+#        steps:
+#          - bash: echo $(environment) QADeployJob
+#  - stage: ProdDeploy
+#    variables:
+#      environment: Prod
+#    dependsOn:
+#    - DevDeploy
+#    - QADeploy
+#    jobs:
+#      - job: ProdDeployJob
+#        steps:
+#          - bash: echo $(environment) ProdDeployJob
