--- a/05-azure-kubernetes-cluster-iaac-pipeline.yml
+++ b/05-azure-kubernetes-cluster-iaac-pipeline.yml
@@ -25,7 +25,7 @@ steps:
     backendServiceArm: 'azure-resource-manager-service-connection'
     ensureBackend: true
     backendAzureRmResourceGroupName: 'terraform-backend-rg'
-    backendAzureRmResourceGroupLocation: 'westeurope'
+    backendAzureRmResourceGroupLocation: 'northeurope'
     backendAzureRmStorageAccountName: 'storageacctstsllc'
     backendAzureRmContainerName: 'storageacctstsllccontainer'
     backendAzureRmKey: 'kubernetes-dev.tfstate'
